--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "latest",
     "react": "latest",
+    "react-datepicker": "^4.18.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "latest"
   }
