--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lottiefiles/react-lottie-player": "^3.5.3",
+    "axios": "^1.5.1",
+    "lottie-react": "^2.4.0",
     "next": "latest",
     "react": "latest",
     "react-datepicker": "^4.18.0",
